YAY, 77 Translations Done! only 300 More To Go

--- a/src/main/resources/assets/terrariamod/lang/lol_us.json
+++ b/src/main/resources/assets/terrariamod/lang/lol_us.json
@@ -297,15 +297,15 @@
   "block.trewrite.ichor_torch": "Ichor Torch",
   "block.trewrite.cursed_torch": "Cursed Torch",
   "block.trewrite.bone_torch": "Bone Torch",
-  "block.trewrite.ultrabright_torch": "Ultrabright Torch",
-  "block.trewrite.ice_torch": "Ice Torch",
-  "block.trewrite.door": "Door",
-  "block.trewrite.bottle": "Bottle",
-  "block.trewrite.table": "Table",
-  "block.trewrite.chair": "Chair",
-  "block.trewrite.iron_anvil": "Iron Anvil",
-  "block.trewrite.chest": "Chest",
-  "block.trewrite.workbench": "Workbench",
+  "block.trewrite.ultrabright_torch": "eie burnr",
+  "block.trewrite.ice_torch": "coldz torch",
+  "block.trewrite.door": "opening wall",
+  "block.trewrite.bottle": "portabl kat attakr",
+  "block.trewrite.table": "GIMME FUD Now",
+  "block.trewrite.chair": "gittingz thing",
+  "block.trewrite.iron_anvil": "crafting ironn",
+  "block.trewrite.chest": "putz ithms inz me",
+  "block.trewrite.workbench": "craftinz wood",
   "block.trewrite.wood_platform": "natural brown tallz standabl thinz",
   "block.trewrite.wood": "natural brown tallz thin",
   "block.trewrite.corrupt_grass": "Not propr glaz",
