77 MORE TRANSLATIONS DONE! 154 Done In Total!

--- a/src/main/resources/assets/terrariamod/lang/lol_us.json
+++ b/src/main/resources/assets/terrariamod/lang/lol_us.json
@@ -220,83 +220,83 @@
   "item.trewrite.gold_bow": "Gold Bow",
   "item.trewrite.iron_bow": "Iron Bow",
   "item.trewrite.cactus_pickaxe": "Cactus Pickaxe",
-  "item.trewrite.cactus_sword": "Cactus Sword",
-  "item.trewrite.gold_broadsword": "Gold Broadsword",
-  "item.trewrite.gold_shortsword": "Gold Shortsword",
-  "item.trewrite.gold_pickaxe": "Gold Pickaxe",
-  "item.trewrite.gold_hammer": "Gold Hammer",
-  "item.trewrite.gold_axe": "Gold Axe",
-  "item.trewrite.silver_axe": "Silver Axe",
-  "item.trewrite.silver_hammer": "Silver Hammer",
-  "item.trewrite.silver_pickaxe": "Silver Pickaxe",
-  "item.trewrite.silver_broadsword": "Silver Broadsword",
-  "item.trewrite.silver_shortsword": "Silver Shortsword",
-  "item.trewrite.silver_bullet": "Silver Bullet",
-  "item.trewrite.wooden_hammer": "Wooden Hammer",
-  "item.trewrite.meteorite_bar": "Meteorite Bar",
-  "item.trewrite.space_gun": "Space Gun",
-  "block.trewrite.meteorite": "Meteorite",
-  "block.trewrite.shadow_orb": "Shadow Orb",
-  "block.trewrite.rope": "Rope",
-  "block.trewrite.obsidian_bed": "Obsidian Bed",
-  "block.trewrite.obsidian_workbench": "Obsidian Workbench",
-  "block.trewrite.obsidian_table": "Obsidian Table",
-  "block.trewrite.obsidian_sink": "Obsidian Sink",
-  "block.trewrite.obsidian_bathtub": "Obsidian Bathtub",
-  "block.trewrite.obsidian_sofa": "Obsidian Sofa",
-  "block.trewrite.obsidian_chair": "Obsidian Chair",
-  "block.trewrite.obsidian_dresser": "Obsidian Dresser",
-  "block.trewrite.obsidian_clock": "Obsidian Clock",
-  "block.trewrite.obsidian_chest": "Obsidian Chest",
-  "block.trewrite.obsidian_vase": "Obsidian Vase",
-  "block.trewrite.obsidian_platform": "Obsidian Platform",
-  "block.trewrite.obsidian_lamp": "Obsidian Lamp",
-  "block.trewrite.obsidian_piano": "Obsidian Piano",
-  "block.trewrite.obsidian_door": "Obsidian Door",
-  "block.trewrite.obsidian_chandelier": "Obsidian Chandelier",
-  "block.trewrite.obsidian_candelabra": "Obsidian Candelabra",
-  "block.trewrite.obsidian_candle": "Obsidian Candle",
-  "block.trewrite.obsidian_lantern": "Obsidian Lantern",
-  "block.trewrite.obsidian_brick": "Obsidian Brick",
-  "block.trewrite.obsidian_bookcase": "Obsidian Bookcase",
-  "block.trewrite.hellforge": "Hellforge",
-  "block.trewrite.obsidian": "Obsidian",
-  "block.trewrite.ash_block": "Ash Block",
-  "block.trewrite.iridescent_brick": "Iridescent Brick",
-  "block.trewrite.hellstone": "Hellstone",
-  "block.trewrite.hellstone_bricks": "Hellstone Bricks",
-  "block.trewrite.angel_statue": "Angel Statue",
-  "block.trewrite.glass": "Glass",
-  "block.trewrite.glass_platform": "Glass Platform",
-  "block.trewrite.cactus_block": "Cactus Block",
-  "block.trewrite.chain": "Chain",
-  "block.trewrite.forest_sapling": "Acorn",
-  "block.trewrite.dirt_block": "Dirt",
-  "block.trewrite.iron_ore": "Iron Ore",
-  "block.trewrite.copper_ore": "Copper Ore",
-  "block.trewrite.silver_ore": "Silver Ore",
-  "block.trewrite.gold_ore": "Gold Ore",
-  "block.trewrite.stone_block": "Stone",
-  "block.trewrite.mushroom": "Mushroom",
-  "block.trewrite.life_crystal": "Life Crystal",
-  "block.trewrite.grass_block": "Grass Block",
-  "block.trewrite.grass_path": "Grass Path",
-  "block.trewrite.furnace": "Furnace",
-  "block.trewrite.torch": "Torch",
-  "block.trewrite.torch_wall": "Wall Torch",
-  "block.trewrite.green_torch": "Green Torch",
-  "block.trewrite.blue_torch": "Blue Torch",
-  "block.trewrite.red_torch": "Red Torch",
-  "block.trewrite.orange_torch": "Orange Torch",
-  "block.trewrite.yellow_torch": "Yellow Torch",
-  "block.trewrite.purple_torch": "Purple Torch",
-  "block.trewrite.white_torch": "White Torch",
-  "block.trewrite.pink_torch": "Pink Torch",
-  "block.trewrite.rainbow_torch": "Rainbow Torch",
-  "block.trewrite.corrupt_torch": "Demon Torch",
-  "block.trewrite.ichor_torch": "Ichor Torch",
-  "block.trewrite.cursed_torch": "Cursed Torch",
-  "block.trewrite.bone_torch": "Bone Torch",
+  "item.trewrite.cactus_sword": "prikili sworddddd",
+  "item.trewrite.gold_broadsword": "yeloz biggo sword",
+  "item.trewrite.gold_shortsword": "yeloz smol sword",
+  "item.trewrite.gold_pickaxe": "yelllllllo Pickaxe",
+  "item.trewrite.gold_hammer": "yellllllllllllllllllllllllllllllllllll.ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo Hammer",
+  "item.trewrite.gold_axe": "yello tree enimih",
+  "item.trewrite.silver_axe": "shini treh enimi",
+  "item.trewrite.silver_hammer": "Shininini hammmmmar",
+  "item.trewrite.silver_pickaxe": "Shini mininj thinjo",
+  "item.trewrite.silver_broadsword": "shini bigg sword",
+  "item.trewrite.silver_shortsword": "shini smol sword",
+  "item.trewrite.silver_bullet": "Shini gun insert thingo",
+  "item.trewrite.wooden_hammer": "Hammar but Wooood",
+  "item.trewrite.meteorite_bar": "Spaze Rokh Barri",
+  "item.trewrite.space_gun": "Spaz PewwWWWWW Peu",
+  "block.trewrite.meteorite": "Spaze Rokse",
+  "block.trewrite.shadow_orb": "SHADOOOOOOOOOOOOOOO spherze",
+  "block.trewrite.rope": "metal rope but not metal",
+  "block.trewrite.obsidian_bed": "mi bak :(((((( Bed",
+  "block.trewrite.obsidian_workbench": "paw pain  Workbench",
+  "block.trewrite.obsidian_table": "Obizidiah Table",
+  "block.trewrite.obsidian_sink": "blak wired Sink",
+  "block.trewrite.obsidian_bathtub": "harddd Bathtub",
+  "block.trewrite.obsidian_sofa": "owwwww Sofa",
+  "block.trewrite.obsidian_chair": "blaak Chair",
+  "block.trewrite.obsidian_dresser": "obzidianz Dresser",
+  "block.trewrite.obsidian_clock": "obi Clock",
+  "block.trewrite.obsidian_chest": "owwwwww my paws Chest",
+  "block.trewrite.obsidian_vase": "Obbii Vase",
+  "block.trewrite.obsidian_platform": "blak Platform",
+  "block.trewrite.obsidian_lamp": "blak herad Lamp",
+  "block.trewrite.obsidian_piano": "Harrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrd Piano",
+  "block.trewrite.obsidian_door": "hardds Door",
+  "block.trewrite.obsidian_chandelier": "HARDRD Chandelier",
+  "block.trewrite.obsidian_candelabra": "HHHHHAAARRRDDD Candelabra",
+  "block.trewrite.obsidian_candle": "HARDE Candle",
+  "block.trewrite.obsidian_lantern": "hard Lantern",
+  "block.trewrite.obsidian_brick": "hard Brick",
+  "block.trewrite.obsidian_bookcase": "Hard book cupboard",
+  "block.trewrite.hellforge": "HELLLLLLLLLLLLLForger",
+  "block.trewrite.obsidian": "Blakishz hard stones",
+  "block.trewrite.ash_block": "burn blokk",
+  "block.trewrite.iridescent_brick": "I cant spell this namez brikk",
+  "block.trewrite.hellstone": "HELLston",
+  "block.trewrite.hellstone_bricks": "hellsotn braks",
+  "block.trewrite.angel_statue": "stone anjle",
+  "block.trewrite.glass": "see thru",
+  "block.trewrite.glass_platform": "see thru standing thing",
+  "block.trewrite.cactus_block": "Prikili Greenz thingo",
+  "block.trewrite.chain": "rope But metal",
+  "block.trewrite.forest_sapling": "Poky Acorne Thingooooz",
+  "block.trewrite.dirt_block": "dirtyz durt",
+  "block.trewrite.iron_ore": "grey but notz that grei stonh",
+  "block.trewrite.copper_ore": "Cbrown stonz",
+  "block.trewrite.silver_ore": "grey grey stonh",
+  "block.trewrite.gold_ore": "yello stone",
+  "block.trewrite.stone_block": "greyz thinggo",
+  "block.trewrite.mushroom": "minih treez",
+  "block.trewrite.life_crystal": "heart shini thinjo",
+  "block.trewrite.grass_block": "Gren durty durt",
+  "block.trewrite.grass_path": "gren walk thing",
+  "block.trewrite.furnace": "ore melterz",
+  "block.trewrite.torch": "litez",
+  "block.trewrite.torch_wall": "wally torche",
+  "block.trewrite.green_torch": "yucki torchi",
+  "block.trewrite.blue_torch": "illegal water fire torch",
+  "block.trewrite.red_torch": "reddish lightz",
+  "block.trewrite.orange_torch": "orrangeish liitz",
+  "block.trewrite.yellow_torch": "sun fire torkh",
+  "block.trewrite.purple_torch": "purpal tiorchez",
+  "block.trewrite.white_torch": "wite torche",
+  "block.trewrite.pink_torch": "reddish withish torche",
+  "block.trewrite.rainbow_torch": "light.woooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooow",
+  "block.trewrite.corrupt_torch": "enemi light",
+  "block.trewrite.ichor_torch": "Ichorz lite",
+  "block.trewrite.cursed_torch": "dangarus tarch",
+  "block.trewrite.bone_torch": "dog treatz lit",
   "block.trewrite.ultrabright_torch": "eie burnr",
   "block.trewrite.ice_torch": "coldz torch",
   "block.trewrite.door": "opening wall",
@@ -315,19 +315,19 @@
   "block.trewrite.demonite_ore": "enimi rok",
   "block.trewrite.sunflower": "Rotating thingz whic follo sun",
   "block.trewrite.altar": "Enimi ritual thinz",
-  "block.trewrite.vile_mushroom": "Vilez Mash-MinihThreeh",
+  "block.trewrite.vile_mushroom": "Vilez MinihThreeh",
   "block.trewrite.pot": "unraw potz",
   "block.trewrite.piggy_bank": "Pink Animalz Kurrency Holdinz thingoz",
   "block.trewrite.ebonwood": "eboni three",
   "block.trewrite.pearlwood": "oister withe valuable thing three",
   "block.trewrite.shadewood": "woodz of the shadz three",
-  "block.trewrite.rich_mahogany": "red three",
+  "block.trewrite.rich_mahogany": "rich three",
   "block.trewrite.boreal_wood": "borelz three",
   "block.trewrite.palm_wood": "palmz three",
   "block.trewrite.ebonwood_platform": "ebony thee plarformz",
   "block.trewrite.pearlwood_platform": "oister withe valuable thing thee plarformz",
   "block.trewrite.shadewood_platform": "woodz of the shadz thee plarformz",
-  "block.trewrite.rich_mahogany_platform": "red thee plarformz",
+  "block.trewrite.rich_mahogany_platform": "rich thee plarformz",
   "block.trewrite.boreal_wood_platform": "borelz thee plarformz",
   "block.trewrite.palm_wood_platform": "palmz thee plarformz",
   "block.trewrite.living_wood_platform": "alivz tree standing thing",
