--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -240,7 +240,7 @@
 	"block.terrariamod.obsidian_bookcase": "Obsidian Bookcase",
 	"block.terrariamod.hellforge": "Hellforge",
 	"block.terrariamod.obsidian": "Obsidian",
-	"block.terrariamod.ash_block": "Ash Block",
+	"block.terrariamod.ash": "Ash",
 	"block.terrariamod.iridescent_brick": "Iridescent Brick",
 	"block.terrariamod.hellstone": "Hellstone",
 	"block.terrariamod.hellstone_bricks": "Hellstone Bricks",
