A lot of changes!!!
Added King Slime

Added a basic music ticking system(WIP)

Added a custom version of GeckoLib as a dependency

--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -16,6 +16,7 @@
 	"block.terrariamod.mythril_anvil": "Mythril Anvil",
 	"block.terrariamod.orichalcum_anvil": "Orichalcum Anvil",
 	"item.terrariamod.wood": "Wood",
+	"item.terrariamod.slime_crown": "Slime Crown",
 	"item.terrariamod.lucky_horseshoe": "Lucky Horseshoe",
 	"item.terrariamod.excalibur": "Excalibur",
 	"item.terrariamod.life_fruit": "Life Fruit",
