--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -4,6 +4,7 @@
 	"item.terrariamod.demon_eye_slime_spawn_egg": "Spawn Demon Eye",
 	"item.terrariamod.demon_spawn_egg": "Spawn Demon",
 	"item.terrariamod.eater_of_souls_spawn_egg": "Spawn Eater of Souls",
+	"item.terrariamod.granite_elemental_spawn_egg": "Spawn Granite Elemental",
 	"block.terrariamod.cloud": "Cloud",
 	"block.terrariamod.ruby_ore": "Ruby",
 	"block.terrariamod.sapphire_ore": "Sapphire",
@@ -261,6 +262,9 @@
 	"block.terrariamod.chain": "Chain",
 	"block.terrariamod.forest_sapling": "Acorn",
 	"block.terrariamod.dirt_block": "Dirt",
+	"block.terrariamod.marble": "Marble",
+	"block.terrariamod.granite": "Granite",
+	"block.terrariamod.wooden_beam": "Wooden Beam",
 	"block.terrariamod.iron_ore": "Iron Ore",
 	"block.terrariamod.copper_ore": "Copper Ore",
 	"block.terrariamod.silver_ore": "Silver Ore",
