Inventory rewrite complete!

--- a/src/main/resources/assets/trewrite/lang/en_us.json
+++ b/src/main/resources/assets/trewrite/lang/en_us.json
@@ -352,6 +352,7 @@
 	"key.trewrite.hotbareight.desc": "Hotbar Slot 8",
 	"key.trewrite.hotbarnine.desc": "Hotbar Slot 9",
 	"key.trewrite.clearsummons.desc": "Clear Summons",
+	"key.trewrite.favorite_item.desc": "Favorite Item",
 	"generator.Terraria-Style": "Terraria-Style"
 	
 	
