More polishing on the inventory/added crafting

--- a/src/main/resources/assets/trewrite/lang/en_us.json
+++ b/src/main/resources/assets/trewrite/lang/en_us.json
@@ -353,6 +353,7 @@
 	"key.trewrite.hotbarnine.desc": "Hotbar Slot 9",
 	"key.trewrite.clearsummons.desc": "Clear Summons",
 	"key.trewrite.favorite_item.desc": "Favorite Item",
+	"key.trewrite.auto_equip.desc": "Auto Equip",
 	"generator.Terraria-Style": "Terraria-Style"
 	
 	
