Add fruit and tree shaking

--- a/src/main/resources/assets/trewrite/lang/en_us.json
+++ b/src/main/resources/assets/trewrite/lang/en_us.json
@@ -16,6 +16,9 @@
 	"block.trewrite.mythril_anvil": "Mythril Anvil",
 	"block.trewrite.orichalcum_anvil": "Orichalcum Anvil",
 	"item.trewrite.lucky_horseshoe": "Lucky Horseshoe",
+	"item.trewrite.apple": "Apple",
+	"item.trewrite.apricot": "Apricot",
+	"item.trewrite.peach": "Peach",
 	"item.trewrite.excalibur": "Excalibur",
 	"item.trewrite.life_fruit": "Life Fruit",
 	"item.trewrite.tissue_sample": "Tissue Samples",
