Fix some problems with resources

--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -23,6 +23,7 @@
 	"block.terrariamod.titanium_ore": "Titanium Ore",	
 	"block.terrariamod.mythril_anvil": "Mythril Anvil",
 	"block.terrariamod.orichalcum_anvil": "Orichalcum Anvil",
+	"item.terrariamod.honey_bucket": "Honey Bucket",
 	"item.terrariamod.aglet": "Aglet",
 	"item.terrariamod.magma_stone": "Magma Stone",
 	"item.terrariamod.shackle": "Shackle",
