--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -28,7 +28,7 @@
 	"item.terrariamod.magma_stone": "Magma Stone",
 	"item.terrariamod.shackle": "Shackle",
 	"item.terrariamod.gold_crown": "Gold Crown",
-	"item.terrariamod.wood": "Wood",
+	"block.terrariamod.wood": "Wood",
 	"item.terrariamod.slime_crown": "Slime Crown",
 	"item.terrariamod.lucky_horseshoe": "Lucky Horseshoe",
 	"item.terrariamod.excalibur": "Excalibur",
