--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -267,6 +267,7 @@
 	"block.terrariamod.glass": "Glass",
 	"block.terrariamod.glass_platform": "Glass Platform",
 	"block.terrariamod.cactus_block": "Cactus Block",
+	"block.terrariamod.jungle_grass": "Jungle Grass",
 	"block.terrariamod.chain": "Chain",
 	"block.terrariamod.forest_sapling": "Acorn",
 	"block.terrariamod.dirt_block": "Dirt",
@@ -288,6 +289,8 @@
 	"block.terrariamod.waterleaf": "Waterleaf",
 	"block.terrariamod.life_crystal": "Life Crystal",
 	"block.terrariamod.grass_block": "Grass Block",
+	"block.terrariamod.corrupted_grass": "Corruption Grass",
+	"block.terrariamod.crimson_grass": "Crimson Grass",
 	"block.terrariamod.grass_path": "Grass Path",
 	"block.terrariamod.furnace": "Furnace",
 	"block.terrariamod.torch": "Torch",
