--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -6,6 +6,8 @@
 	"item.terrariamod.eater_of_souls_spawn_egg": "Spawn Eater of Souls",
 	"item.terrariamod.granite_elemental_spawn_egg": "Spawn Granite Elemental",
 	"block.terrariamod.cloud": "Cloud",
+	"block.terrariamod.honey_block": "Honey Block",
+	"block.terrariamod.crispy_honey_block": "Crispy Honey Block",
 	"block.terrariamod.ruby_ore": "Ruby",
 	"block.terrariamod.sapphire_ore": "Sapphire",
 	"block.terrariamod.crimtane_ore": "Crimtane Ore",
