--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -5,6 +5,11 @@
 	"item.terrariamod.demon_spawn_egg": "Spawn Demon",
 	"item.terrariamod.eater_of_souls_spawn_egg": "Spawn Eater of Souls",
 	"item.terrariamod.granite_elemental_spawn_egg": "Spawn Granite Elemental",
+	"item.terrariamod.day_one_disc": "Day One",
+	"item.terrariamod.night_disc": "Night",
+	"item.terrariamod.boss_one_disc": "Boss One",
+	"item.terrariamod.underground_disc": "Underground",
+	"item.terrariamod.underworld_disc": "Underworld",
 	"block.terrariamod.cloud": "Cloud",
 	"block.terrariamod.honey_block": "Honey Block",
 	"block.terrariamod.crispy_honey_block": "Crispy Honey Block",
