Ninja armor and fixes

--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -105,6 +105,9 @@
 	"item.terrariamod.copper_helmet": "Copper Helmet",
 	"item.terrariamod.copper_chestplate": "Copper Chestplate",
 	"item.terrariamod.copper_leggings": "Copper Leggings",
+	"item.terrariamod.ninja_helmet": "Ninja Helmet",
+	"item.terrariamod.ninja_chestplate": "Ninja Chestplate",
+	"item.terrariamod.ninja_leggings": "Ninja Leggings",
 	"item.terrariamod.iron_helmet": "Iron Helmet",
 	"item.terrariamod.iron_chestplate": "Iron Chestplate",
 	"item.terrariamod.iron_leggings": "Iron Leggings",
