--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -108,6 +108,7 @@
 	"item.terrariamod.ninja_helmet": "Ninja Helmet",
 	"item.terrariamod.ninja_chestplate": "Ninja Chestplate",
 	"item.terrariamod.ninja_leggings": "Ninja Leggings",
+	"item.terrariamod.king_slime_bag": "Treasure Bag",
 	"item.terrariamod.iron_helmet": "Iron Helmet",
 	"item.terrariamod.iron_chestplate": "Iron Chestplate",
 	"item.terrariamod.iron_leggings": "Iron Leggings",
