--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -109,6 +109,7 @@
 	"item.terrariamod.ninja_chestplate": "Ninja Chestplate",
 	"item.terrariamod.ninja_leggings": "Ninja Leggings",
 	"item.terrariamod.king_slime_bag": "Treasure Bag",
+	"item.terrariamod.royal_gel": "Royal Gel",
 	"item.terrariamod.iron_helmet": "Iron Helmet",
 	"item.terrariamod.iron_chestplate": "Iron Chestplate",
 	"item.terrariamod.iron_leggings": "Iron Leggings",
