--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -100,19 +100,21 @@
 	"item.terrariamod.cactus_chestplate": "Cactus Chestplate",
 	"item.terrariamod.cactus_boots": "Cactus Boots",
 	"item.terrariamod.gold_helmet": "Gold Helmet",
-	"item.terrariamod.gold_chestplate": "Gold Chestplate",
-	"item.terrariamod.gold_leggings": "Gold Leggings",
+	"item.terrariamod.gold_chestplate": "Gold Chainmail",
+	"item.terrariamod.gold_leggings": "Gold Greaves",
 	"item.terrariamod.copper_helmet": "Copper Helmet",
-	"item.terrariamod.copper_chestplate": "Copper Chestplate",
-	"item.terrariamod.copper_leggings": "Copper Leggings",
-	"item.terrariamod.ninja_helmet": "Ninja Helmet",
-	"item.terrariamod.ninja_chestplate": "Ninja Chestplate",
-	"item.terrariamod.ninja_leggings": "Ninja Leggings",
+	"item.terrariamod.copper_chestplate": "Copper Chainmail",
+	"item.terrariamod.copper_leggings": "Copper Greaves",
+	"item.terrariamod.ninja_helmet": "Ninja Hood",
+	"item.terrariamod.ninja_chestplate": "Ninja Shirt",
+	"item.terrariamod.ninja_leggings": "Ninja Pants",
 	"item.terrariamod.king_slime_bag": "Treasure Bag",
+	"item.terrariamod.eoc_bag": "Treasure Bag",
 	"item.terrariamod.royal_gel": "Royal Gel",
+	"item.terrariamod.shield_of_cthulhu": "Shield of Cthulhu",
 	"item.terrariamod.iron_helmet": "Iron Helmet",
-	"item.terrariamod.iron_chestplate": "Iron Chestplate",
-	"item.terrariamod.iron_leggings": "Iron Leggings",
+	"item.terrariamod.iron_chestplate": "Iron Chainmail",
+	"item.terrariamod.iron_leggings": "Iron Greaves",
 	"item.terrariamod.molten_helmet": "Molten Helmet",
 	"item.terrariamod.molten_chestplate": "Molten Chestplate",
 	"item.terrariamod.molten_boots": "Molten Boots",
