--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -9,7 +9,7 @@
 	"item.terrariamod.night_disc": "Night",
 	"item.terrariamod.boss_one_disc": "Boss One",
 	"item.terrariamod.underground_disc": "Underground",
-	"item.terrariamod.underworld_disc": "Underworld",
+	"item.terrariamod.title_disc": "Title Screen",
 	"block.terrariamod.cloud": "Cloud",
 	"block.terrariamod.honey_block": "Honey Block",
 	"block.terrariamod.crispy_honey_block": "Crispy Honey Block",
