--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -337,7 +337,13 @@
 	"block.terrariamod.table": "Table",
 	"block.terrariamod.chair": "Chair",
 	"block.terrariamod.iron_anvil": "Iron Anvil",
-	"block.terrariamod.chest": "Chest",
+	"block.terrariamod.wood_chest": "Chest",
+	"block.terrariamod.gold_chest": "Gold Chest",
+	"block.terrariamod.ivy_chest": "Ivy Chest",
+	"block.terrariamod.water_chest": "Water Chest",
+	"block.terrariamod.skyware_chest": "Skyware Chest",
+	"block.terrariamod.sandstone_chest": "Sandstone Chest",
+	"block.terrariamod.frozen_chest": "Frozen Chest",
 	"block.terrariamod.workbench": "Workbench",
 	"block.terrariamod.wood_platform": "Wood Platform",
 	"block.terrariamod.corrupt_grass": "Corrupt Grass",
