--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -17,7 +17,9 @@
 	"item.terrariamod.underground_disc": "Underground",
 	"item.terrariamod.underworld_disc": "Underworld",
 	"item.terrariamod.title_disc": "Title Screen",
+	"block.terrariamod.sunplate_block": "Sunplate Block",
 	"block.terrariamod.cloud": "Cloud",
+	"block.terrariamod.rain_cloud": "Rain Cloud",
 	"block.terrariamod.honey_block": "Honey Block",
 	"block.terrariamod.crispy_honey_block": "Crispy Honey Block",
 	"block.terrariamod.ruby_ore": "Ruby",
