--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -41,6 +41,7 @@
 	"block.terrariamod.orichalcum_anvil": "Orichalcum Anvil",
 	"item.terrariamod.honey_bucket": "Honey Bucket",
 	"item.terrariamod.aglet": "Aglet",
+	"item.terrariamod.shiny_red_balloon": "Shiny Red Balloon",
 	"item.terrariamod.magma_stone": "Magma Stone",
 	"item.terrariamod.shackle": "Shackle",
 	"item.terrariamod.gold_crown": "Gold Crown",
