--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -27,6 +27,8 @@
 	"block.terrariamod.crimtane_ore": "Crimtane Ore",
 	"block.terrariamod.life_fruit": "Life Fruit",
 	"block.terrariamod.blue_brick": "Blue Brick",
+	"block.terrariamod.green_brick": "Green Brick",
+	"block.terrariamod.purple_brick": "Purple Brick",
 	"block.terrariamod.crimson_grass": "Crimson Grass",
 	"block.terrariamod.hallow_grass": "Hallow Grass",
 	"block.terrariamod.crimstone": "Crimstone",
