--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -26,6 +26,7 @@
 	"block.terrariamod.sapphire_ore": "Sapphire",
 	"block.terrariamod.crimtane_ore": "Crimtane Ore",
 	"block.terrariamod.life_fruit": "Life Fruit",
+	"block.terrariamod.spike": "Spike",
 	"block.terrariamod.blue_brick": "Blue Brick",
 	"block.terrariamod.green_brick": "Green Brick",
 	"block.terrariamod.purple_brick": "Purple Brick",
