--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -27,6 +27,7 @@
 	"block.terrariamod.crimtane_ore": "Crimtane Ore",
 	"block.terrariamod.life_fruit": "Life Fruit",
 	"block.terrariamod.spike": "Spike",
+	"block.terrariamod.water_candle": "Water Candle",
 	"block.terrariamod.blue_brick": "Blue Brick",
 	"block.terrariamod.green_brick": "Green Brick",
 	"block.terrariamod.purple_brick": "Purple Brick",
