World generation changes

--- a/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -355,6 +355,7 @@
 	"block.terrariamod.wood_platform": "Wood Platform",
 	"block.terrariamod.corrupt_grass": "Corrupt Grass",
 	"block.terrariamod.sand": "Sand",
+	"block.terrariamod.sandstone": "Sandstone",
 	"block.terrariamod.ebonsand": "Ebonsand",
 	"block.terrariamod.ebonstone": "Ebonstone",
 	"block.terrariamod.demonite_ore": "Demonite Ore",
