More mushrooms, grass and chest items

--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -371,6 +371,7 @@
 	"block.terrariamod.sunflower": "Sunflower",
 	"block.terrariamod.altar": "Demon Altar",
 	"block.terrariamod.vile_mushroom": "Vile Mushroom",
+	"block.terrariamod.vicious_mushroom": "Vicious Mushroom",
 	"block.terrariamod.pot": "Pot",
 	"block.terrariamod.piggy_bank": "Piggy Bank",
 	"block.terrariamod.ebonwood": "Ebonwood",
