New dimension and custom portal

--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -296,6 +296,7 @@
 	"block.terrariamod.hellforge": "Hellforge",
 	"block.terrariamod.obsidian": "Obsidian",
 	"block.terrariamod.ash": "Ash",
+	"block.terrariamod.ash": "Ash Grass",
 	"block.terrariamod.iridescent_brick": "Iridescent Brick",
 	"block.terrariamod.hellstone_ore": "Hellstone",
 	"block.terrariamod.hellstone_bricks": "Hellstone Bricks",
