--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -1,4 +1,13 @@
 {
+	"architecture_extensions.grouped_block.green_brick": "Green Brick",
+	"architecture_extensions.grouped_block.blue_brick": "Blue Brick",
+	"architecture_extensions.grouped_block.purple_brick": "Purple Brick",
+	"architecture_extensions.grouped_block.corrupted_wood": "Ebonwood",
+	"architecture_extensions.grouped_block.crimson_wood": "Shadewood",
+	"architecture_extensions.grouped_block.crimstone": "Crimstone",
+	"architecture_extensions.grouped_block.marble": "Marble",
+	"architecture_extensions.grouped_block.wood": "Wood",
+	"architecture_extensions.grouped_block.ebonstone": "Ebonstone",
 	"text.autoconfig.terrariamod.option.customWorldGen": "Use Terraria World Generation",
 	"text.autoconfig.terrariamod.option.generateExtrasInVanilla": "Generate Extra Features (Underworld, Underground Biomes etc.)",
 	"text.autoconfig.terrariamod.option.useVanillaHud": "Use Vanilla Hud",
@@ -305,7 +314,7 @@
 	"block.terrariamod.hellforge": "Hellforge",
 	"block.terrariamod.obsidian": "Obsidian",
 	"block.terrariamod.ash": "Ash",
-	"block.terrariamod.ash": "Ash Grass",
+	"block.terrariamod.ash_grass_block": "Ash Grass",
 	"block.terrariamod.iridescent_brick": "Iridescent Brick",
 	"block.terrariamod.hellstone_ore": "Hellstone",
 	"block.terrariamod.hellstone_bricks": "Hellstone Bricks",
