All pre-hardmode ores/bars and obsidian

--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -32,8 +32,6 @@
 	"block.terrariamod.rain_cloud": "Rain Cloud",
 	"block.terrariamod.honey_block": "Honey Block",
 	"block.terrariamod.crispy_honey_block": "Crispy Honey Block",
-	"block.terrariamod.ruby_ore": "Ruby",
-	"block.terrariamod.sapphire_ore": "Sapphire",
 	"block.terrariamod.forest_stump": "Forest Stump",
 	"block.terrariamod.forest_stem": "Forest Stem",
 	"block.terrariamod.forest_top": "Forest Top",
@@ -181,6 +179,10 @@
 	"item.terrariamod.iron_hammer": "Iron Hammer",
 	"item.terrariamod.lesser_mana_potion": "Lesser Mana Potion",
 	"item.terrariamod.copper_bar": "Copper Bar",
+	"item.terrariamod.tin_bar": "Tin Bar",
+	"item.terrariamod.lead_bar": "Lead Bar",
+	"item.terrariamod.platinum_bar": "Platinum Bar",
+	"item.terrariamod.tungsten_bar": "Tungsten Bar",
 	"item.terrariamod.silver_bar": "Silver Bar",
 	"item.terrariamod.iron_bar": "Iron Bar",
 	"item.terrariamod.goggles": "Goggles",
@@ -287,7 +289,7 @@
 	"item.terrariamod.wooden_hammer": "Wooden Hammer",
 	"item.terrariamod.meteorite_bar": "Meteorite Bar",
 	"item.terrariamod.space_gun": "Space Gun",
-	"block.terrariamod.meteorite": "Meteorite",
+	"block.terrariamod.meteorite_ore": "Meteorite",
 	"block.terrariamod.shadow_orb": "Shadow Orb",
 	"block.terrariamod.rope": "Rope",
 	"block.terrariamod.obsidian_bed": "Obsidian Bed",
@@ -331,9 +333,19 @@
 	"block.terrariamod.granite": "Granite",
 	"block.terrariamod.wooden_beam": "Wooden Beam",
 	"block.terrariamod.iron_ore": "Iron Ore",
+	"block.terrariamod.lead_ore": "Lead Ore",
 	"block.terrariamod.copper_ore": "Copper Ore",
+	"block.terrariamod.tin_ore": "Tin Ore",
 	"block.terrariamod.silver_ore": "Silver Ore",
 	"block.terrariamod.gold_ore": "Gold Ore",
+	"block.terrariamod.platinum_ore": "Platinum Ore",
+	"block.terrariamod.tungsten_ore": "Tungsten Ore",
+	"block.terrariamod.ruby_ore": "Ruby",
+	"block.terrariamod.sapphire_ore": "Sapphire",
+	"block.terrariamod.emerald_ore": "Emerald",
+	"block.terrariamod.diamond_ore": "Diamond",
+	"block.terrariamod.topaz_ore": "Topaz",
+	"block.terrariamod.amethyst_ore": "Amethyst",
 	"block.terrariamod.stone_block": "Stone",
 	"block.terrariamod.mushroom": "Mushroom",
 	"block.terrariamod.blinkroot": "Brinkroot",
