--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -69,6 +69,7 @@
 	"item.terrariamod.magma_stone": "Magma Stone",
 	"item.terrariamod.shackle": "Shackle",
 	"item.terrariamod.gold_crown": "Gold Crown",
+	"item.terrariamod.platinum_crown": "Platinum Crown",
 	"block.terrariamod.wood": "Wood",
 	"block.terrariamod.corrupted_wood": "Ebonwood",
 	"block.terrariamod.crimson_wood": "Shadewood",
