Final BlanketCon release

--- a/common/src/main/resources/assets/terrariamod/lang/en_us.json
+++ b/common/src/main/resources/assets/terrariamod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"block.customportalapi.terraria": "Terraria Portal",
 	"architecture_extensions.grouped_block.green_brick": "Green Brick",
 	"architecture_extensions.grouped_block.blue_brick": "Blue Brick",
 	"architecture_extensions.grouped_block.purple_brick": "Purple Brick",
@@ -19,7 +20,7 @@
 	"itemGroup.terrariamod.terrariamod_tab": "TerrariaMod",
 	"item.terrariamod.green_slime_spawn_egg": "Spawn Green Slime",
 	"item.terrariamod.blue_slime_spawn_egg": "Spawn Blue Slime",
-	"item.terrariamod.demon_eye_slime_spawn_egg": "Spawn Demon Eye",
+	"item.terrariamod.demon_eye_spawn_egg": "Spawn Demon Eye",
 	"item.terrariamod.demon_spawn_egg": "Spawn Demon",
 	"item.terrariamod.eater_of_souls_spawn_egg": "Spawn Eater of Souls",
 	"item.terrariamod.granite_elemental_spawn_egg": "Spawn Granite Elemental",
@@ -49,6 +50,10 @@
 	"block.terrariamod.life_fruit": "Life Fruit",
 	"block.terrariamod.spike": "Spike",
 	"block.terrariamod.grass": "Grass",
+	"block.terrariamod.survival_plate": "Survival Plate",
+	"block.terrariamod.adventure_plate": "Survival Plate",
+	"block.terrariamod.dead_grass": "Dead Grass",
+	"block.terrariamod.bloody_grass": "Bloody Grass",
 	"block.terrariamod.water_candle": "Water Candle",
 	"block.terrariamod.blue_brick": "Blue Brick",
 	"block.terrariamod.green_brick": "Green Brick",
@@ -212,6 +217,7 @@
 	"item.terrariamod.iron_bar": "Iron Bar",
 	"item.terrariamod.goggles": "Goggles",
 	"item.terrariamod.lens": "Lens",
+	"item.terrariamod.black_lens": "Black Lens",
 	"item.terrariamod.wooden_bow": "Wooden Bow",
 	"item.terrariamod.shadewood_bow": "Shadewood Bow",
 	"item.terrariamod.ebonwood_bow": "Ebonwood Bow",
@@ -285,11 +291,11 @@
 	"item.terrariamod.ball_o_hurt": "Ball O' Hurt",
 	"item.terrariamod.band_of_starpower": "Band of Starpower",
 	"item.terrariamod.fiery_greatsword": "Fiery Greatsword",
-	"item.terrariamod.tekhaira": "Tekhaira",
 	"item.terrariamod.hellstone_bar": "Hellstone Bar",
 	"item.terrariamod.molten_pickaxe": "Molten Pickaxe",
 	"item.terrariamod.molten_fury": "Molten Fury",
 	"item.terrariamod.handgun": "Handgun",
+	"item.terrariamod.sunglasses": "Sunglasses",
 	"item.terrariamod.molten_handaxe": "Molten Handaxe",
 	"item.terrariamod.enchanted_boomerang": "Enchanted Boomerang",
 	"item.terrariamod.molten_hamaxe": "Molten Hamaxe",
@@ -302,6 +308,7 @@
 	"item.terrariamod.iron_bow": "Iron Bow",
 	"item.terrariamod.cactus_pickaxe": "Cactus Pickaxe",
 	"item.terrariamod.cactus_sword": "Cactus Sword",
+	"block.terrariamod.cactus": "Cactus",
 	"item.terrariamod.cactus": "Cactus",
 	"item.terrariamod.gold_broadsword": "Gold Broadsword",
 	"item.terrariamod.gold_shortsword": "Gold Shortsword",
